--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 org.gradle.jvmargs = -Xmx2G
 
 # Fabric Properties
-	minecraft_version = 1.17.1
-	loader_version = 0.11.6
+  	minecraft_version=1.17.1
+	loader_version=0.12.5
 
 # Mod Properties
-	mod_version = .0.0
+	mod_version = 1.0.0
 	maven_group = com.telepathicgrunt
 	archives_base_name = no_null_processors
