--- a/build.gradle
+++ b/build.gradle
@@ -11,19 +11,19 @@ buildscript {
 }
 
 plugins {
-	id 'fabric-loom' version '0.8-SNAPSHOT'
+	id 'fabric-loom' version '0.10-SNAPSHOT'
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_16
-targetCompatibility = JavaVersion.VERSION_16
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 version = "${project.mod_version}+${project.minecraft_version}"
-archivesBaseName = "${project.archives_base_name}_fabric"
+archivesBaseName = project.archives_base_name
 group = project.maven_group
 
-minecraft {
-	accessWidener = file("src/main/resources/no_null_processors.accesswidener")
+loom {
+	accessWidenerPath = file("src/main/resources/no_null_processors.accesswidener")
 }
 
 repositories {
@@ -41,12 +41,7 @@ apply from: 'gradle/processresources.gradle'
 
 tasks.withType(JavaCompile).configureEach {
 	it.options.encoding = "UTF-8"
-	it.options.release = 16
-}
-
-task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
-	from sourceSets.main.allSource
+	it.options.release = 17
 }
 
 java {
