--- a/gradle/modrinth.gradle
+++ b/gradle/modrinth.gradle
@@ -16,13 +16,12 @@ String fileContents = new File("./", "CHANGELOG.md").text
 // Make sure it runs after build!
 task publishModrinth (type: TaskModrinthUpload){
     token = "$System.env.MODRINTH"
-    versionName = "No Null Processors"
+    versionName = "No Null Processors Fabric"
     projectId = 'eA8SXqWL'
     versionNumber = project.version
     uploadFile = remapJar
     changelog = fileContents
-    addGameVersion("1.17")
-    addGameVersion("1.17.1")
+    addGameVersion("1.18")
     addLoader('fabric')
 }
 
