--- a/build.gradle
+++ b/build.gradle
@@ -1,57 +1,75 @@
-import net.fabricmc.loom.task.RemapJarTask
-
 buildscript {
 	repositories {
+		maven { url = 'https://maven.minecraftforge.net' }
+		jcenter()
+		mavenCentral()
+		maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
 		maven { url "https://plugins.gradle.org/m2/" }
 	}
 	dependencies {
+		classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.+', changing: true
+		classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
 		classpath "gradle.plugin.com.matthewprenger:CurseGradle:1.4.0"
 		classpath group: 'gradle.plugin.com.modrinth.minotaur', name: 'Minotaur', version: '1.2.1'
 	}
 }
 
-plugins {
-	id 'fabric-loom' version '0.10-SNAPSHOT'
-	id 'maven-publish'
+apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'maven-publish'
+apply plugin: 'org.spongepowered.mixin'
+
+version = "${mod_version}+${mc_version}"
+group = "com.telepathicgrunt"
+archivesBaseName = "${modid}_forge"
+
+java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+
+minecraft {
+	mappings channel: "official", version: "1.18"
+	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+
+	runs {
+		client {
+			workingDirectory project.file('run')
+			arg "-mixin.config=" + project.getProperty('modid') + ".mixins.json"
+			property 'mixin.env.remapRefMap', 'true'
+			property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+			mods { no_null_processors { source sourceSets.main } }
+		}
+
+		server {
+			workingDirectory project.file('run')
+			arg "-mixin.config=" + project.getProperty('modid') + ".mixins.json"
+			property 'mixin.env.remapRefMap', 'true'
+			property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+			mods { no_null_processors { source sourceSets.main } }
+		}
+
+		data {
+			workingDirectory project.file('run')
+			args '--mod', project.getProperty('modid'), '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+			arg "-mixin.config=" + project.getProperty('modid') + ".mixins.json"
+			property 'mixin.env.remapRefMap', 'true'
+			property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+			mods { no_null_processors { source sourceSets.main } }
+		}
+	}
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
-
-version = "${project.mod_version}+${project.minecraft_version}"
-archivesBaseName = project.archives_base_name
-group = project.maven_group
-
-loom {
-	accessWidenerPath = file("src/main/resources/no_null_processors.accesswidener")
-}
-
-repositories {
-	maven { url "https://api.modrinth.com/maven/" }
-	maven { url "https://www.cursemaven.com" }
-}
+repositories {}
 
 dependencies {
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings minecraft.officialMojangMappings()
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
+	if (System.getProperty("idea.sync.active") != "true") {
+		annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
+	}
 }
 
 apply from: 'gradle/processresources.gradle'
+apply from: 'gradle/manifest.gradle'
 
-tasks.withType(JavaCompile).configureEach {
-	it.options.encoding = "UTF-8"
-	it.options.release = 17
-}
-
-java {
-	withSourcesJar()
-}
-
-jar {
-	from("LICENSE") {
-		rename { "${it}_${project.archivesBaseName}"}
-	}
+mixin {
+	add sourceSets.main, "${modid}.refmap.json"
 }
 
 apply from: 'gradle/maven.gradle'
@@ -59,4 +77,4 @@ apply from: 'gradle/curseforge.gradle'
 apply from: 'gradle/modrinth.gradle'
 
 task buildAndRelease{}
-tasks.buildAndRelease.dependsOn(tasks.build, tasks.publish, tasks.curseforge)
+tasks.buildAndRelease.dependsOn(tasks.build, tasks.publish, tasks.curseforge, tasks.publishModrinth)
