--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,7 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs = -Xmx2G
-
-# Fabric Properties
-	minecraft_version = 1.18
-	loader_version = 0.12.6
-
-# Mod Properties
-	mod_version = 2.0.0
-	maven_group = com.telepathicgrunt
-	archives_base_name = no_null_processors_fabric
+org.gradle.daemon=false
+mod_version=2.0.0
+mc_version=1.18
+forge_version=38.0.12
+modid=no_null_processors
