--- a/gradle/modrinth.gradle
+++ b/gradle/modrinth.gradle
@@ -16,12 +16,12 @@ String fileContents = new File("./", "CHANGELOG.md").text
 // Make sure it runs after build!
 task publishModrinth (type: TaskModrinthUpload){
     token = "$System.env.MODRINTH"
-    versionName = "No Null Processors Fabric"
+    versionName = "No Null Processors Forge"
     projectId = 'eA8SXqWL'
     versionNumber = project.version
-    uploadFile = remapJar
+    uploadFile = jar
     changelog = fileContents
     addGameVersion("1.18")
-    addLoader('fabric')
+    addLoader('forge')
 }
 
