--- a/gradle/modrinth.gradle
+++ b/gradle/modrinth.gradle
@@ -11,7 +11,7 @@ apply plugin: "com.modrinth.minotaur"
 
 import com.modrinth.minotaur.TaskModrinthUpload
 
-String fileContents = new File("./", "CHANGELOG.md").text
+String fileContents = file("./CHANGELOG.md").getText('UTF-8')
 
 // Make sure it runs after build!
 task publishModrinth (type: TaskModrinthUpload){
